--- a/TP1-part2/tp1.html
+++ b/TP1-part2/tp1.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 
 <html>
-  <!-- Head -->
-  <head>
-    <!-- CSS files -->
-    <link rel='stylesheet' type='text/css' href='./css/web.css' media='screen' />
-    <!-- <link rel='stylesheet' type='text/css' href='./css/00_reset.css' media='screen' /> -->
-    <!-- <link rel='stylesheet' type='text/css' href='./css/01_mobile.css' media='screen' /> -->
-    <link rel='stylesheet' type='text/css' href='./css/02_fonts.css' media='screen' />
-    <link rel='stylesheet' type='text/css' href='./css/03_icons.css' media='screen' />
+<!-- Head -->
 
-    <!-- JS files -->
-    <script type='text/javascript' src='./js/jquery-3.7.0.min.js'></script>
-    <!-- <script type='text/javascript' src='./js/jquery-ui.min.js'></script> -->
-    <!-- <script type='text/javascript' src='./js/refresh1s.js'></script> -->
-    <script type='text/javascript' src='./js/web.js'></script>
+<head>
+    <style>
+        table, th, td {
+            border: 1px solid #000;
+            border-collapse: collapse;
+        }
+    </style>
 
     <!-- UTF8 encoding -->
     <meta charset='UTF-8'>
@@ -27,53 +22,44 @@
 
     <!-- Title -->
     <title>Template</title>
-  </head>
+</head>
 
 
 
-  <!-- Body -->
-  <body>
+<!-- Body -->
+
+<body>
     <!-- Wrapper -->
     <div class='wrapper'>
 
-      Template <i>&#xE872;</i>
-      Template <i>&#xea63;</i>
+        <h1>La page de Jorbby</h1>
+        <h4>J'imagine</h4>
+        <h2> Mes qualités et défauts</h2>
+        <h3> Mes qualités</h3>
+        <h3>Mes défauts</h3>
+        <h2>Mes informations</h2>
+
+        <table>
+            <tr>
+                <th>Infos</th>
+                <th>Valeurs</th>
+            </tr>
+            <tr>
+                <td>Ville de naissance</td>
+                <td>Taille</td>
+            </tr>
+        </table>
+
+        <h2> Mes aptitudes</h2>
+        <table>
+            <tr>
+                <th>Aptitudes</th>
+                <th>Pourcentages</th>
+            </tr>
+        </table>
+        <progress value="7" max="10"> </progress>
 
     </div>
-  </body>
-  
+</body>
+
 </html>
-      <h1>La page de Jorbby</h1>
-      <h4>J'imagine</h4>
-      <h2> Mes qualités et défauts</h2>
-      <h3> Mes qualités</h3>
-      <h3>Mes défauts</h3>
-      <h2>Mes informations</h2>
-
-      <table>
-        <tr>
-          <th>Infos</th>
-          <th>Valeurs</th>
-          </tr>
-          <tr>
-          <td>Ville de naissance</td>
-          <td>Taille</td>
-          <td>Poids</td>
-          <td>Couleur des yeux</td>
-          <td>Nombre de frères</td>
-          <td>Nombre de soeur</td>
-          </tr>
-          </table>
-
-                <h2> Mes aptitudes</h2>
-                <table>
-                  <tr> 
-                    <th>Aptitudes</th>
-                     <th>Pourcentages</th>
-                    </tr>
-                    </table>
-                <progress value="7" max="10"> </progress>
-                
-
-
-          
