--- a/tp5.java/template.html
+++ b/tp5.java/template.html
@@ -35,23 +35,51 @@
   <body>
     <!-- Wrapper -->
     <div class='wrapper'>
+      <HEADER>
+        <img src="./medias/spidey.jpg " alt="">
+        <H1>Mon profil</H1>
+        <ul> 
+          <li> eva.poree@monmail.com</li>
+        <li> 0694 01 23 45 </li></ul>
 
-      Template <i>&#xE872;</i>
-      Template <i>&#xea63;</i>
+      </HEADER>
+      <section>
+        <h2>Mes coordonnées</h2>
+        <article> 
+          <h3>Pour me trouver</h3>
+          <ul>
+        <li><input type='text' class='inputEmail' placeholder='Email' value='eva.poree@monmail.com'/></li>            
+        <li><input value="0694 01 23 45"></li>
 
-      <h1>Jahahahahahaha</h1>
-      <p>parker.spid@monmail.com</p>
-      
-      <ul>
-        <li> Mes coordonées</li>
-        <li> Mes couleurs</li>
-        <li> Mes qualités</li>
-      </ul>
-<img src="./medias/spidey.jpg "
-alt="The head and torso of a dinosaur skeleton;
-          it has a large head with long sharp teeth"
-  width="360"
-  height="360"/> 
+          </ul>
+        </article>
+
+        <h2>Mes couleurs</h2>
+        <article> 
+          <h3>Les couleurs que j'aime</h3>
+          <ul>
+            <li><input type="color" value="#FF0000"></li>
+            <li><input type="color" value="#FF0000"></li>
+
+          </ul>
+        </article>
+        
+        <h2>Mes qualités</h2>
+        <article> 
+          <h3>Les qualités que j'ai:</h3>
+          <ul>
+            <li>Belle</li>
+            <li>Grande</li>
+            <li>Forte</li>
+            <li> Intelligente</li>
+            <li>Modeste</li>
+            <li><input value="une autre qualité"></li>
+
+          </ul>
+        </article>
+
+
+      </section>
  </div>
   </body>
 </html>
